feat(home): :sparkles: add presentation text (ines)

--- a/todo
+++ b/todo
@@ -1,7 +1,7 @@
-- Page compétences
-- Page projets
-- Faire les textes de présentation
-- Faire le rapport
-- Clean le code
-- Ranger le style
-- Essayer de fix le text decoration
+- Page compétences Théo
+- Page projets Théo
+- Faire le texte de présentation (accueil) Théo
+
+- Essayer de fix le text decoration Inès
+
+- Faire le rapport Inès & Théo
