--- a/todo
+++ b/todo
@@ -1,7 +1,7 @@
 - Page compétences Théo
 - Page projets Théo
 - Faire le texte de présentation (accueil) Théo
+- Faire le rapport (Problèmes et Difficultés rencontrées, Conclusion, Références) Théo
 
 - Essayer de fix le text decoration Inès
-
-- Faire le rapport Inès & Théo
+- Pour la page contact => validation avec le forms
